# TemplateCppMcuProject

./: CMakeLists.txt
.devcontainer/: devcontainer.json
main-app/src/: CMakeLists.txt  main.cpp
platform/src/: CMakeLists.txt  Platform.cpp  Platform.h  boot.c
